<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10mdp"
            >


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/_100mdp"
                android:layout_height="@dimen/_100mdp"
                android:layout_marginTop="@dimen/_20mdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/reelicon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10mdp"
                android:text="@string/snapee"
                android:textColor="@color/black"
                android:textSize="@dimen/_20font_mdp"
                android:textStyle="italic|bold"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20mdp"
                android:layout_marginTop="@dimen/_20mdp"
                android:background="@drawable/text_bg"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10mdp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20mdp"
                android:layout_marginTop="@dimen/_15mdp"
                android:background="@drawable/text_bg"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/create_your_password"
                android:inputType="textPassword"
                android:padding="@dimen/_10mdp"
                app:layout_constraintEnd_toEndOf="@+id/Email"
                app:layout_constraintStart_toStartOf="@+id/Email"
                app:layout_constraintTop_toBottomOf="@+id/Email" />

            <EditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20mdp"
                android:layout_marginTop="@dimen/_15mdp"
                android:background="@drawable/text_bg"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/_10mdp"
                app:layout_constraintEnd_toEndOf="@+id/Password"
                app:layout_constraintStart_toStartOf="@+id/Password"
                app:layout_constraintTop_toBottomOf="@+id/Password" />

            <Button
                android:id="@+id/SignupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30mdp"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="@dimen/_30mdp"
                android:paddingVertical="@dimen/_5mdp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_15font_mdp"
                app:cornerRadius="@dimen/_20mdp"
                app:layout_constraintEnd_toEndOf="@+id/ConfirmPassword"
                app:layout_constraintStart_toStartOf="@+id/ConfirmPassword"
                app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword"
                app:strokeColor="#4CAF50"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/SigninTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20mdp"
                android:text="Signin"
                android:textColor="@color/black"
                android:textSize="@dimen/_15font_mdp"
                app:layout_constraintEnd_toEndOf="@+id/SignupBtn"
                app:layout_constraintStart_toStartOf="@+id/SignupBtn"
                app:layout_constraintTop_toBottomOf="@+id/SignupBtn" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>