<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="@dimen/_30mdp"
    tools:context=".Fragments.UploadVideoFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uploadView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10mdp"
        android:layout_marginTop="@dimen/_30mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/UploadVideo"
            android:layout_width="@dimen/_55mdp"
            android:layout_height="@dimen/_55mdp"
            android:layout_marginTop="@dimen/_20mdp"
            android:src="@drawable/upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5mdp"
            android:text="@string/click_on_plus_icon"
            android:textColor="#2B2A2A"
            android:textSize="@dimen/_12font_mdp"
            app:layout_constraintEnd_toEndOf="@+id/UploadVideo"
            app:layout_constraintStart_toStartOf="@+id/UploadVideo"
            app:layout_constraintTop_toBottomOf="@+id/UploadVideo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="@dimen/_30mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadView">


        <ImageView
            android:id="@+id/Thumbnail"
            android:layout_width="@dimen/_90mdp"
            android:layout_height="@dimen/_150mdp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Caption"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60mdp"
            android:layout_marginHorizontal="@dimen/_20mdp"
            android:layout_marginTop="@dimen/_10mdp"
            android:layout_marginBottom="@dimen/_10mdp"
            android:background="@drawable/text_bg"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/write_caption_here"
            android:inputType="text"
            android:padding="@dimen/_10mdp"
            app:layout_constraintEnd_toEndOf="@+id/Thumbnail"
            app:layout_constraintStart_toStartOf="@+id/Thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/Thumbnail" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30mdp"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#FF0000"
            app:cornerRadius="@dimen/_5mdp"
            app:layout_constraintEnd_toStartOf="@+id/Done"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Caption"
            app:strokeColor="#4CAF50"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="#2196F3"
            app:cornerRadius="@dimen/_5mdp"
            app:layout_constraintBottom_toBottomOf="@+id/cancelBtn"
            app:layout_constraintEnd_toEndOf="@+id/Caption"
            app:layout_constraintStart_toEndOf="@+id/cancelBtn"
            app:layout_constraintTop_toTopOf="@+id/cancelBtn"
            app:strokeColor="#4CAF50"
            app:strokeWidth="1dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/PleaseWait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please wait..."
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="@dimen/_20font_mdp"
            app:layout_constraintEnd_toEndOf="@+id/Caption"
            app:layout_constraintStart_toStartOf="@+id/Caption"
            app:layout_constraintTop_toBottomOf="@+id/Thumbnail" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



